# RemoteSoecketDebug

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/vicky/remotesoecketdebug/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/wkigen/remotesoecketdebug/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/vicky/remotesoecketdebug/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
remote_debugger/: build.gradle
remote_debugger/src/androidTest/java/com/github/wkigen/RemoteDebugger/: ExampleInstrumentedTest.java
remote_debugger/src/main/: AndroidManifest.xml
remote_debugger/src/main/cpp/: CMakeLists.txt  main.cpp
remote_debugger/src/main/cpp/debugger/: CMakeLists.txt  Debugger.cpp  Debugger.h  JdwpPacket.cpp  JdwpProtocol.h  JdwpSerializer.h  JdwpSocket.h
remote_debugger/src/main/cpp/flinker/: CMakeLists.txt  fake_dlfcn.c  fake_dlfcn.h  system_utils.c  system_utils.h
remote_debugger/src/main/java/com/github/wkigen/RemoteDebugger/: Constant.java  Debugger.java  JdwpService.java  JdwpSocket.java
remote_debugger/src/test/java/com/github/wkigen/RemoteDebugger/: ExampleUnitTest.java
